# game-box

./: .gitignore  README.md  dev-webpack.config.js  package.json  secrets.json  server.js  truffle-box.json  truffle-config.js  webpack.config.js
.github/: CODEOWNERS
contracts/confidential-contract/src/: lib.rs
contracts/contract/: Cargo.toml
contracts/contract/src/: lib.rs
core/client/: Cargo.toml
core/client/src/: lib.rs
core/game/: Cargo.toml
core/game/src/: lib.rs
scripts/: build-frontend.js  clean-all.sh  create.js  start-parity.sh  unbox-hook.sh
src/: template.html
src/components/: board.css  board.js
src/pages/multiplayer/: index.js
src/pages/singleplayer/: index.js
test/: test-server.js
